# Recipes

./: .dockerignore  README.md  account.py  app.py  benchmark.py  database.py  dockerfile  index.sql  init.sql  pylint.md  pylintresults.txt  pyproject.toml  recipes.py  reviews.py  schema.sql  validation.py  views.py
recipes/: __init__.py  account.py  app.py
recipes/templates/: create_recipe.html  recipe.html
static/: main.css
templates/: create_recipe.html  edit_recipe.html  edit_review.html  index.html  login.html  not_found.html  recipe.html  register.html  search_recipe.html  search_results.html  user.html
templates/error_pages/: add_recipe.html  create_account.html  login_account.html  recipe_not_found.html  user_not_found.html
